welcome.lessons.welcome.array.array667.Array667.scala.error
array667:2: error: ';' expected but integer literal found.
  for (i<-0 to nums.length-2) {if (nums(i))== 6 && nums(i+1) ==6) {compteur = compteur+1}; if (nums(i) == 6 && nums(i+1) ==7) {compteur = compteur +1}}; return compteur}
                                              ^